2006-10-26  Mike Urbanski <michael.c.urbanski@gmail.com>

	* plugins/Podcast/PodcastCore.cs: Added rudimentary 
	certificate support.  (BGO #349504)

	* plugins/Podcast/PodcastDBManager.cs: Corrected DbCommand 
	support.
	
	* plugins/Podcast/Podcast.mdp:
	* plugins/Podcast/Makefile.am: Added PodcastCertificatePolicy.cs
	to project.  (Thanks go to Nathan Palmer)
     
	* plugins/Podcast/DownloadCore/DownloadCore.cs:
	* plugins/Podcast/DownloadTask.cs: Better support for 
	feeds containing multiple enclosures w\ the same filename.

2006-10-23  Aaron Bockover  <abock@gnome.org>

	Banshee Official Plugins 0.11.2 Released

	* configure.ac: Bump to 0.11.2

	* NEWS: Updated

2006-10-23  Aaron Bockover  <abock@gnome.org>

	* plugins/Recommendation/RecommendationUtilities.cs: 
	* plugins/Podcast/PodcastDBManager.cs: Use the new DbCommand support

	* plugins/Podcast/DownloadCore/DownloadCore.cs: Work around bug in 
	mcs 1.1.18

2006-10-21  Mike Urbanski <michael.c.urbanski@gmail.com>

	* plugins/Podcast/Makefile.am:
	* plugins/Podcast/Podcast.mdp:
	* plugins/Podcast/UI/PodcastPixbufs.cs:
	* plugins/Podcast/UI/PodcastPlaylistView.cs:
	* plugins/Podcast/data/images/banshee-new.png: Podcasts that have been 
	download and have a play count of zero are now flagged.     
        	
	* plugins/Podcast/DownloadCore/DownloadCore.cs:	
	* plugins/Podcast/DownloadCore/DownloadTask.cs:
	* plugins/Podcast/DownloadCore/HttpDownloadTask.cs: Additional tolerance
	for HTTP responses lacking a "Content-Length" header.

2006-10-18  Mike Urbanski <michael.c.urbanski@gmail.com> 

	* plugins/Podcast/StringUtils.cs:  
	* plugins/Podcast/UI/PodcastSubscribeDialog.cs:  Addressed licensing 
	issues. 
		
2006-10-13  Aaron Bockover  <abock@gnome.org>

	0.11.1 Released

	* NEWS: Updated

	* configure.ac: Bump to 0.11.1

2006-09-29  Mike Urbanski <michael.c.urbanski@gmail.com> 

	* plugins/Podcast/UI/PodcastSource.cs: Implemented 'ActionPath' 
	property.
	